SAStrutsPlugin 変更履歴

* 0.0.9 [2008//]
[Improvement] JSPのs:linkタグからアクションへ飛べるようにする。 [SASTRUTS-96]
[Improvement] View on Server機能で表示するURLのコンテキストパスを自由に指定できるようにする。 [SASTRUTS-97]

* 0.0.8 [2008/08/11]
[Bug] WEB-INF/view/index.jspからIndexActionへ遷移できない問題を修正しました。 [SASTRUTS-89] [seasar-dev:881]

* 0.0.7 [2008/06/27]
[Bug] 2段以上ネストしたアクションからJSPファイルを作成する際のフォルダパスがおかしい問題を修正しました。 [SASTRUTS-72] [Seasar-user:14807]
[Improvement] SAStrutsPluginのキーバインディングの変更（F6,F7→Ctrl+8） [SASTRUTS-73] [Seasar-user:14814] 

* 0.0.6 [2008/06/06]
[Bug] web.xmlのcontext-param要素が無い場合にActionへの遷移がおかしい問題を修正しました。 [SASTRUTS-60] [seasar-dev:828]
[Bug] 空のActionに飛べない問題を修正しました。 [SASTRUTS-64]
[Improvement] action要素が無くてinputタグの行で操作した場合に該当メソッドに飛べるようにする。 [SASTRUTS-61] [seasar-dev:828]
[Improvement] ネストしたIndexAction対応。 [SASTRUTS-63] [seasar-dev:828]
[New Feature] View on Server機能。 [SASTRUTS-66] [seasar-dev:828]
[New Feature] Actionクラスの雛形を作成する。 [SASTRUTS-67] [seasar-dev:828]

* 0.0.5 [2008/05/20]
[Bug] JSPを新規作成するときに親フォルダが自動的に計算されない問題を修正しました。 [SASTRUTS-49]
[Bug] パスを分割した場合に処理がおかしい問題を修正しました。 [SASTRUTS-51]
[Bug] Javaを新規作成するときに親フォルダが自動的に計算されない問題を修正しました。 [SASTRUTS-54]
[Improvement] Viewのプレフィックス対応(JSP→Javaで一部実装もれがありました)。 [SASTRUTS-48]
[Improvement] urlPattern対応。 [SASTRUTS-52]
[Improvement] s:formのないJSPからでもActionに飛べるようにする。 [SASTRUTS-53]

* 0.0.4 [2008/05/18]
[Bug] IndexActionから存在しているJSPファイルに飛べない問題を修正しました。 [SASTRUTS-42]
[Bug] JavaからJSPに遷移する際、文字列リテラルの先頭が/の場合でもWebアプリケーションのルートからの相対パスでなくアクションからの相対パスになってしまう問題を修正しました。 [SASTRUTS-43]
[Bug] 二段階以上ネストしたルートパッケージを考慮していない問題を修正しました。 [SASTRUTS-44]
[Improvement] Viewのプレフィックス対応 [SASTRUTS-48]

* 0.0.3 [2008/04/27]
[Improvement] ネット接続していない環境でも使用できるようにする（EntityResolverを使う）。　[SASTRUTS-39]
[Improvement] convention.diconからルートパッケージを取得する処理の改良 [SASTRUTS-38] [Seasar-user:13821]
[New Feature] JSPのinputタグからJavaのメソッドに飛べるようにする。 [SASTRUTS-37]

* 0.0.2 [2008/3/22]
[Improvement] JavaソースにあるJSPファイル名の文字列を選択しなくても、カーソル行からJSPに飛べるようにする [SAStruts-27] [Seasar-user:13282]